--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-kronos==1.0
 django-environ==0.9.0
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
-sentry-sdk==1.15.0
+sentry-sdk==1.16.0
 django-translated-fields==0.12.0
 Pillow==9.4.0
 requests==2.28.2
@@ -14,9 +14,10 @@ django-sslserver==0.22.0
 django-dump-load-utf8==0.0.4
 black==23.1.0
 flake8==6.0.0
-pre-commit==3.1.0
+pre-commit==3.1.1
 PyJWT==2.6.0
 requests-oauthlib==1.3.1
 django-colorfield==0.8.0
 openai==0.26.5
 django-admin-interface==0.24.2
+app-store-scraper==0.3.5
