--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,5 @@ venv
 /static/
 /content/
 /utils/keys/AuthKey_TV7554QL5R.p8
+utils/keys/SubscriptionKey_J2NZ5JHSUV.p8
+utils/keys/AppStore_357Q2LDNYU.p8
